--- a/client/client.html
+++ b/client/client.html
@@ -1,6 +1,10 @@
 <body>
 	<div class="container">
 		<div class="panel panel-primary">
+			<div class="panel-heading clearfix">
+				<h3 class="panel-title">Salas</h3>
+				{{> loginButtons}}
+			</div>
 			<div class="panel-body">
 				{{> list_rooms}}
 			</div>
@@ -16,17 +20,19 @@
 <template name="list_rooms">
 	<table class="table table-bordered table-hover table-condensed table-striped">
 		<thead>
-			<td>Sala</td>
-			<td>Jogadres</td>
-			<td width="80" class="text-center">Ações</td>
+			<tr>
+				<td>Sala</td>
+				<td>Jogadres</td>
+				<td width="80" class="text-center">Ações</td>
+			</tr>
 		</thead>
 		<tbody>
 			{{#each rooms}}
 			<tr>
-				<td>{{ nome }}</td>
+				<td>{{ _id }}</td>
 				<td>{{ players.length }}</td>
 				<td class="text-center">
-					<button type="button" class="btn btn-xs btn-primary">Entrar na Sala</button>
+					<button id="bt_entrar_sala" type="button" class="btn btn-xs btn-primary">Entrar na Sala</button>
 				</td>
 			</tr>
 			{{/each}}
