--- a/client/client.html
+++ b/client/client.html
@@ -1,4 +1,12 @@
 <body>
+
+</body>
+
+<template name="tabuleiro">
+	...
+</template>
+
+<template name="container">
 	<div class="container">
 		<div class="panel panel-primary">
 			<div class="panel-heading clearfix">
@@ -8,14 +16,16 @@
 			<div class="panel-body">
 				{{> list_rooms}}
 			</div>
-			<div class="panel-footer clearfix">
-				<div class="pull-right">
-					<button type="button" class="btn btn-warning">Criar Sala</button>
+			{{#if canCreateRoom}}
+				<div class="panel-footer clearfix">
+					<div class="pull-right">
+						<button type="button" class="btn btn-warning">Criar Sala</button>
+					</div>
 				</div>
-			</div>
+			{{/if}}
 		</div>
 	</div>
-</body>
+</template>
 
 <template name="list_rooms">
 	<table class="table table-bordered table-hover table-condensed table-striped">
@@ -32,7 +42,7 @@
 				<td>{{ _id }}</td>
 				<td>{{ players.length }}</td>
 				<td class="text-center">
-					<button id="bt_entrar_sala" type="button" class="btn btn-xs btn-primary">Entrar na Sala</button>
+					<button type="button" class="btn btn-xs btn-primary">Entrar na Sala</button>
 				</td>
 			</tr>
 			{{/each}}
